--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.0",
     "redux-persist": "^6.0.0",
+    "slate": "^0.113.0",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.113.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
@@ -54,8 +57,8 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
